Fix double doi links in CAV conference pages

--- a/Conferences/CAV 2021.md
+++ b/Conferences/CAV 2021.md
@@ -1,128 +1,128 @@
 ## Computer Aided Verification - 33rd International Conference, CAV 2021, Proceedings, Part I
 ---
--	[🔓](https://doi.org/https://doi.org/10.1007/978-3-030-81685-8_16) Stateless Model Checking Under a Reads-Value-From Equivalence.
+-	[🔓](https://doi.org/10.1007/978-3-030-81685-8_16) Stateless Model Checking Under a Reads-Value-From Equivalence.
 	[Pratyush Agarwal](https://dblp.org/pid/206/9608.html), [Krishnendu Chatterjee](https://dblp.org/pid/92/5602.html), [Shreya Pathak](https://dblp.org/pid/292/8413.html), [Andreas Pavlogiannis](https://dblp.org/pid/47/8037.html), [Viktor Toman](https://dblp.org/pid/215/3408.html)
 	✅ Extends [Nidhugg](Nidhugg)
--	[🔓](https://doi.org/https://doi.org/10.1007/978-3-030-81685-8_30) Fast Zone-Based Algorithms for Reachability in Pushdown Timed Automata.
+-	[🔓](https://doi.org/10.1007/978-3-030-81685-8_30) Fast Zone-Based Algorithms for Reachability in Pushdown Timed Automata.
 	[S. Akshay](https://dblp.org/pid/28/6534.html), [Paul Gastin](https://dblp.org/pid/g/PaulGastin.html), [Karthik R. Prakash](https://dblp.org/pid/293/8772.html)
 	✅ Extends [TChecker](TChecker.md)
--	[🔓](https://doi.org/https://doi.org/10.1007/978-3-030-81685-8_41) Adapting Behaviors via Reactive Synthesis.
+-	[🔓](https://doi.org/10.1007/978-3-030-81685-8_41) Adapting Behaviors via Reactive Synthesis.
 	[Gal Amram](https://dblp.org/pid/132/9195.html), [Suguman Bansal](https://dblp.org/pid/217/4777.html), [Dror Fried](https://dblp.org/pid/74/9853.html), [Lucas Martinelli Tabajara](https://dblp.org/pid/137/3715.html), [Moshe Y. Vardi](https://dblp.org/pid/v/MosheYVardi.html), [Gera Weiss](https://dblp.org/pid/52/1274.html)
 	✅ Presents [[SGR(k)]]
--	[🔓](https://doi.org/https://doi.org/10.1007/978-3-030-81685-8_26) IMITATOR 3 - Synthesis of Timing Parameters Beyond Decidability.
+-	[🔓](https://doi.org/10.1007/978-3-030-81685-8_26) IMITATOR 3 - Synthesis of Timing Parameters Beyond Decidability.
 	[Étienne André](https://dblp.org/pid/49/2992.html)
 	✅ Extends [[IMITATOR]]
--	[🔓](https://doi.org/https://doi.org/10.1007/978-3-030-81685-8_40) PAYNT - A Tool for Inductive Synthesis of Probabilistic Programs.
+-	[🔓](https://doi.org/10.1007/978-3-030-81685-8_40) PAYNT - A Tool for Inductive Synthesis of Probabilistic Programs.
 	[Roman Andriushchenko](https://dblp.org/pid/284/2809.html), [Milan Ceska ](https://dblp.org/pid/213/3728.html), [Sebastian Junges](https://dblp.org/pid/115/4386.html), [Joost-Pieter Katoen](https://dblp.org/pid/k/JoostPieterKatoen.html), [Simon Stupinský](https://dblp.org/pid/297/3712.html)
 	✅ Presents [[PAYNT]]
--	[🔓](https://doi.org/https://doi.org/10.1007/978-3-030-81685-8_14) Isla - Integrating Full-Scale ISA Semantics and Axiomatic Concurrency Models.
+-	[🔓](https://doi.org/10.1007/978-3-030-81685-8_14) Isla - Integrating Full-Scale ISA Semantics and Axiomatic Concurrency Models.
 	[Alasdair Armstrong](https://dblp.org/pid/85/10670.html), [Brian Campbell ](https://dblp.org/pid/58/4171-1.html), [Ben Simner](https://dblp.org/pid/202/8946.html), [Christopher Pulte](https://dblp.org/pid/173/9501.html), [Peter Sewell](https://dblp.org/pid/74/185.html)
 	✅ Presents [[Isla]]
--	[🔓](https://doi.org/https://doi.org/10.1007/978-3-030-81685-8_42) Causality-Based Game Solving.
+-	[🔓](https://doi.org/10.1007/978-3-030-81685-8_42) Causality-Based Game Solving.
 	[Christel Baier](https://dblp.org/pid/b/ChristelBaier.html), [Norine Coenen](https://dblp.org/pid/167/7922.html), [Bernd Finkbeiner](https://dblp.org/pid/73/4443.html), [Florian Funke ](https://dblp.org/pid/69/9320-2.html), [Simon Jantsch](https://dblp.org/pid/222/4864.html), [Julian Siber](https://dblp.org/pid/293/9557.html)
 	✅ Presents [[CabPy]]
--	[🔓](https://doi.org/https://doi.org/10.1007/978-3-030-81685-8_33) A Temporal Logic for Asynchronous Hyperproperties.
+-	[🔓](https://doi.org/10.1007/978-3-030-81685-8_33) A Temporal Logic for Asynchronous Hyperproperties.
 	[Jan Baumeister](https://dblp.org/pid/253/1662.html), [Norine Coenen](https://dblp.org/pid/167/7922.html), [Borzoo Bonakdarpour](https://dblp.org/pid/59/6397.html), [Bernd Finkbeiner](https://dblp.org/pid/73/4443.html), [César Sánchez](https://dblp.org/pid/38/1858.html)
 	❌ None
--	[🔓](https://doi.org/https://doi.org/10.1007/978-3-030-81685-8_24) Computing Bottom SCCs Symbolically Using Transition Guided Reduction.
+-	[🔓](https://doi.org/10.1007/978-3-030-81685-8_24) Computing Bottom SCCs Symbolically Using Transition Guided Reduction.
 	[Nikola Benes](https://dblp.org/pid/71/1110.html), [Lubos Brim](https://dblp.org/pid/92/3060.html), [Samuel Pastva](https://dblp.org/pid/167/4487.html), [David Safránek](https://dblp.org/pid/86/2438.html)
 	⚙️ Implemented an algorithm called ITGR, tool doesn't seem to have a name, seems to be just a prototype
--	[🔓](https://doi.org/https://doi.org/10.1007/978-3-030-81685-8_31) Verified Cryptographic Code for Everybody.
+-	[🔓](https://doi.org/10.1007/978-3-030-81685-8_31) Verified Cryptographic Code for Everybody.
 	[Brett Boston](https://dblp.org/pid/169/6792.html), [Samuel Breese](https://dblp.org/pid/195/8676.html), [Joey Dodds](https://dblp.org/pid/223/5187.html), [Mike Dodds](https://dblp.org/pid/77/665.html), [Brian Huffman](https://dblp.org/pid/69/3465.html), [Adam Petcher](https://dblp.org/pid/90/7791.html), [Andrei Stefanescu](https://dblp.org/pid/13/9657.html)
 	❌ None
--	[🔓](https://doi.org/https://doi.org/10.1007/978-3-030-81685-8_38) Program Sketching by Automatically Generating Mocks from Tests.
+-	[🔓](https://doi.org/10.1007/978-3-030-81685-8_38) Program Sketching by Automatically Generating Mocks from Tests.
 	[Nate F. F. Bragg](https://dblp.org/pid/297/3635.html), [Jeffrey S. Foster](https://dblp.org/pid/18/2050.html), [Cody Roux](https://dblp.org/pid/02/7115.html), [Armando Solar-Lezama](https://dblp.org/pid/95/6919.html)
 	✅ Presents [[Sketcham]], expands [[Sketch]]
--	[🔓](https://doi.org/https://doi.org/10.1007/978-3-030-81685-8_36) Pre-deployment Security Assessment for Cloud Services Through Semantic Reasoning.
+-	[🔓](https://doi.org/10.1007/978-3-030-81685-8_36) Pre-deployment Security Assessment for Cloud Services Through Semantic Reasoning.
 	[Claudia Cauli](https://dblp.org/pid/201/5360.html), [Meng Li](https://dblp.org/pid/70/1726.html), [Nir Piterman](https://dblp.org/pid/p/NPiterman.html), [Oksana Tkachuk](https://dblp.org/pid/88/4695.html)
 	✅ Presents [[CloudFORMAL]]
--	[🔓](https://doi.org/https://doi.org/10.1007/978-3-030-81685-8_9) Automated Safety Verification of Programs Invoking Neural Networks.
+-	[🔓](https://doi.org/10.1007/978-3-030-81685-8_9) Automated Safety Verification of Programs Invoking Neural Networks.
 	[Maria Christakis](https://dblp.org/pid/05/7730.html), [Hasan Ferit Eniser](https://dblp.org/pid/162/5556.html), [Holger Hermanns](https://dblp.org/pid/h/HolgerHermanns.html), [Jörg Hoffmann ](https://dblp.org/pid/26/836.html), [Yugesh Kothari](https://dblp.org/pid/297/3239.html), [Jianlin Li](https://dblp.org/pid/16/3878.html), [Jorge A. Navas](https://dblp.org/pid/77/4230a.html), [Valentin Wüstholz](https://dblp.org/pid/28/9798.html)
 	⚙️ Implementation doesn't seem to have a name? https://github.com/Practical-Formal-Methods/clam-racetrack
--	[🔓](https://doi.org/https://doi.org/10.1007/978-3-030-81685-8_19) Checking Data-Race Freedom of GPU Kernels, Compositionally.
+-	[🔓](https://doi.org/10.1007/978-3-030-81685-8_19) Checking Data-Race Freedom of GPU Kernels, Compositionally.
 	[Tiago Cogumbreiro](https://dblp.org/pid/94/7128.html), [Julien Lange](https://dblp.org/pid/96/7159.html), [Dennis Liew Zhen Rong](https://dblp.org/pid/297/3624.html), [Hannah Zicarelli](https://dblp.org/pid/297/3355.html)
 	✅ Presents [[Faial]]
--	[🔓](https://doi.org/https://doi.org/10.1007/978-3-030-81685-8_4) Programmable Program Synthesis.
+-	[🔓](https://doi.org/10.1007/978-3-030-81685-8_4) Programmable Program Synthesis.
 	[Loris D'Antoni](https://dblp.org/pid/85/770.html), [Qinheping Hu](https://dblp.org/pid/201/4822.html), [Jinwoo Kim](https://dblp.org/pid/85/1809.html), [Thomas W. Reps](https://dblp.org/pid/r/TWReps.html)
 	❌ None
--	[🔓](https://doi.org/https://doi.org/10.1007/978-3-030-81685-8_34) Product Programs in the Wild - Retrofitting Program Verifiers to Check Information Flow Security.
+-	[🔓](https://doi.org/10.1007/978-3-030-81685-8_34) Product Programs in the Wild - Retrofitting Program Verifiers to Check Information Flow Security.
 	[Marco Eilers](https://dblp.org/pid/217/4745.html), [Severin Meier](https://dblp.org/pid/297/4125.html), [Peter Müller ](https://dblp.org/pid/m/PMuller1.html)
 	✅ Extends [Nagini](Nagini.md)
--	[🔓](https://doi.org/https://doi.org/10.1007/978-3-030-81685-8_15) Summing up Smart Transitions.
+-	[🔓](https://doi.org/10.1007/978-3-030-81685-8_15) Summing up Smart Transitions.
 	[Neta Elad](https://dblp.org/pid/292/8081.html), [Sophie Rain](https://dblp.org/pid/292/7625.html), [Neil Immerman](https://dblp.org/pid/i/NeilImmerman.html), [Laura Kovács](https://dblp.org/pid/k/LauraKovacs.html), [Mooly Sagiv](https://dblp.org/pid/s/SSagiv.html)
 	⚙️
--	[🔓](https://doi.org/https://doi.org/10.1007/978-3-030-81685-8_39) Counterexample-Guided Partial Bounding for Recursive Function Synthesis.
+-	[🔓](https://doi.org/10.1007/978-3-030-81685-8_39) Counterexample-Guided Partial Bounding for Recursive Function Synthesis.
 	[Azadeh Farzan](https://dblp.org/pid/89/148.html), [Victor Nicolet](https://dblp.org/pid/194/2361.html)
 	⚙️
--	[🔓](https://doi.org/https://doi.org/10.1007/978-3-030-81685-8_32) Not All Bugs Are Created Equal, But Robust Reachability Can Tell the Difference.
+-	[🔓](https://doi.org/10.1007/978-3-030-81685-8_32) Not All Bugs Are Created Equal, But Robust Reachability Can Tell the Difference.
 	[Guillaume Girol](https://dblp.org/pid/272/7154.html), [Benjamin Farinier](https://dblp.org/pid/215/4462.html), [Sébastien Bardin](https://dblp.org/pid/b/SebastienBardin.html)
 	⚙️
--	[🔓](https://doi.org/https://doi.org/10.1007/978-3-030-81685-8_2) Balancing Automation and Control for Formal Verification of Microprocessors.
+-	[🔓](https://doi.org/10.1007/978-3-030-81685-8_2) Balancing Automation and Control for Formal Verification of Microprocessors.
 	[Shilpi Goel](https://dblp.org/pid/129/1546.html), [Anna Slobodová](https://dblp.org/pid/34/5435.html), [Rob Sumners](https://dblp.org/pid/88/4004.html), [Sol Swords](https://dblp.org/pid/06/513.html)
 	⚙️
--	[🔓](https://doi.org/https://doi.org/10.1007/978-3-030-81685-8_7) Robustness Verification of Quantum Classifiers.
+-	[🔓](https://doi.org/10.1007/978-3-030-81685-8_7) Robustness Verification of Quantum Classifiers.
 	[Ji Guan](https://dblp.org/pid/205/2739.html), [Wang Fang](https://dblp.org/pid/65/2225.html), [Mingsheng Ying](https://dblp.org/pid/13/6525.html)
 	⚙️
--	[🔓](https://doi.org/https://doi.org/10.1007/978-3-030-81685-8_37) Synthesis with Asymptotic Resource Bounds.
+-	[🔓](https://doi.org/10.1007/978-3-030-81685-8_37) Synthesis with Asymptotic Resource Bounds.
 	[Qinheping Hu](https://dblp.org/pid/201/4822.html), [John Cyphert](https://dblp.org/pid/211/9268.html), [Loris D'Antoni](https://dblp.org/pid/85/770.html), [Thomas W. Reps](https://dblp.org/pid/r/TWReps.html)
 	⚙️
--	[🔓](https://doi.org/https://doi.org/10.1007/978-3-030-81685-8_5) Deductive Synthesis of Programs with Pointers - Techniques, Challenges, Opportunities - (Invited Paper).
+-	[🔓](https://doi.org/10.1007/978-3-030-81685-8_5) Deductive Synthesis of Programs with Pointers - Techniques, Challenges, Opportunities - (Invited Paper).
 	[Shachar Itzhaky](https://dblp.org/pid/62/8636.html), [Hila Peleg](https://dblp.org/pid/130/9934.html), [Nadia Polikarpova](https://dblp.org/pid/13/7489.html), [Reuben N. S. Rowe](https://dblp.org/pid/46/9730.html), [Ilya Sergey](https://dblp.org/pid/77/9770.html)
 	⚙️
--	[🔓](https://doi.org/https://doi.org/10.1007/978-3-030-81685-8_11) Verisig 2.0 - Verification of Neural Network Controllers Using Taylor Model Preconditioning.
+-	[🔓](https://doi.org/10.1007/978-3-030-81685-8_11) Verisig 2.0 - Verification of Neural Network Controllers Using Taylor Model Preconditioning.
 	[Radoslav Ivanov](https://dblp.org/pid/144/4256.html), [Taylor J. Carpenter](https://dblp.org/pid/229/8553.html), [James Weimer](https://dblp.org/pid/79/11048.html), [Rajeev Alur](https://dblp.org/pid/a/RAlur.html), [George J. Pappas](https://dblp.org/pid/p/GeorgeJPappas.html), [Insup Lee](https://dblp.org/pid/l/InsupLee.html)
 	⚙️
--	[🔓](https://doi.org/https://doi.org/10.1007/978-3-030-81685-8_18) Delay-Bounded Scheduling Without Delay!
+-	[🔓](https://doi.org/10.1007/978-3-030-81685-8_18) Delay-Bounded Scheduling Without Delay!
 	[Andrew Johnson](https://dblp.org/pid/69/2358.html), [Thomas Wahl](https://dblp.org/pid/72/5272.html)
 	⚙️
--	[🔓](https://doi.org/https://doi.org/10.1007/978-3-030-81685-8_13) PEREGRiNN - Penalized-Relaxation Greedy Neural Network Verifier.
+-	[🔓](https://doi.org/10.1007/978-3-030-81685-8_13) PEREGRiNN - Penalized-Relaxation Greedy Neural Network Verifier.
 	[Haitham Khedr](https://dblp.org/pid/229/4157.html), [James Ferlez](https://dblp.org/pid/143/2685.html), [Yasser Shoukry](https://dblp.org/pid/123/7829.html)
 	⚙️
--	[🔓](https://doi.org/https://doi.org/10.1007/978-3-030-81685-8_3) Algebraic Program Analysis.
+-	[🔓](https://doi.org/10.1007/978-3-030-81685-8_3) Algebraic Program Analysis.
 	[Zachary Kincaid](https://dblp.org/pid/61/6578.html), [Thomas W. Reps](https://dblp.org/pid/r/TWReps.html), [John Cyphert](https://dblp.org/pid/211/9268.html)
 	⚙️
--	[🔓](https://doi.org/https://doi.org/10.1007/978-3-030-81685-8_20) GenMC - A Model Checker for Weak Memory Models.
+-	[🔓](https://doi.org/10.1007/978-3-030-81685-8_20) GenMC - A Model Checker for Weak Memory Models.
 	[Michalis Kokologiannakis](https://dblp.org/pid/204/3706.html), [Viktor Vafeiadis](https://dblp.org/pid/69/1549.html)
 	⚙️
--	[🔓](https://doi.org/https://doi.org/10.1007/978-3-030-81685-8_27) Formally Verified Switching Logic for Recoverability of Aircraft Controller.
+-	[🔓](https://doi.org/10.1007/978-3-030-81685-8_27) Formally Verified Switching Logic for Recoverability of Aircraft Controller.
 	[Ratan Lal](https://dblp.org/pid/170/6323.html), [Aaron McKinnis](https://dblp.org/pid/297/3199.html), [Dustin Hauptman](https://dblp.org/pid/297/2912.html), [Shawn Keshmiri](https://dblp.org/pid/256/7047.html), [Pavithra Prabhakar](https://dblp.org/pid/74/6354.html)
 	⚙️
--	[🔓](https://doi.org/https://doi.org/10.1007/978-3-030-81685-8_23) HybridSynchAADL - Modeling and Formal Analysis of Virtually Synchronous CPSs in AADL.
+-	[🔓](https://doi.org/10.1007/978-3-030-81685-8_23) HybridSynchAADL - Modeling and Formal Analysis of Virtually Synchronous CPSs in AADL.
 	[Jaehun Lee](https://dblp.org/pid/14/824.html), [Sharon Kim](https://dblp.org/pid/267/9153.html), [Kyungmin Bae](https://dblp.org/pid/03/7567.html), [Peter Csaba Ölveczky](https://dblp.org/pid/11/2202.html)
 	⚙️
--	[🔓](https://doi.org/https://doi.org/10.1007/978-3-030-81685-8_25) Implicit Semi-Algebraic Abstraction for Polynomial Dynamical Systems.
+-	[🔓](https://doi.org/10.1007/978-3-030-81685-8_25) Implicit Semi-Algebraic Abstraction for Polynomial Dynamical Systems.
 	[Sergio Mover](https://dblp.org/pid/59/7880.html), [Alessandro Cimatti](https://dblp.org/pid/13/5961.html), [Alberto Griggio](https://dblp.org/pid/19/3686.html), [Ahmed Irfan](https://dblp.org/pid/149/3835.html), [Stefano Tonetta](https://dblp.org/pid/t/StefanoTonetta.html)
 	⚙️
--	[🔓](https://doi.org/https://doi.org/10.1007/978-3-030-81685-8_10) Scalable Polyhedral Verification of Recurrent Neural Networks.
+-	[🔓](https://doi.org/10.1007/978-3-030-81685-8_10) Scalable Polyhedral Verification of Recurrent Neural Networks.
 	[Wonryong Ryou](https://dblp.org/pid/266/1379.html), [Jiayu Chen](https://dblp.org/pid/80/8422.html), [Mislav Balunovic](https://dblp.org/pid/231/7686.html), [Gagandeep Singh ](https://dblp.org/pid/64/3747-1.html), [Andrei Marian Dan](https://dblp.org/pid/131/0034.html), [Martin T. Vechev](https://dblp.org/pid/93/2189.html)
 	⚙️
--	[🔓](https://doi.org/https://doi.org/10.1007/978-3-030-81685-8_6) DNNV - A Framework for Deep Neural Network Verification.
+-	[🔓](https://doi.org/10.1007/978-3-030-81685-8_6) DNNV - A Framework for Deep Neural Network Verification.
 	[David Shriver](https://dblp.org/pid/202/8415.html), [Sebastian G. Elbaum](https://dblp.org/pid/e/SebastianGElbaum.html), [Matthew B. Dwyer](https://dblp.org/pid/d/MatthewBDwyer.html)
 	⚙️
--	[🔓](https://doi.org/https://doi.org/10.1007/978-3-030-81685-8_28) SceneChecker - Boosting Scenario Verification Using Symmetry Abstractions.
+-	[🔓](https://doi.org/10.1007/978-3-030-81685-8_28) SceneChecker - Boosting Scenario Verification Using Symmetry Abstractions.
 	[Hussein Sibai](https://dblp.org/pid/198/6856.html), [Yangge Li](https://dblp.org/pid/228/5704.html), [Sayan Mitra](https://dblp.org/pid/07/3797.html)
 	⚙️
--	[🔓](https://doi.org/https://doi.org/10.1007/978-3-030-81685-8_12) Robustness Verification of Semantic Segmentation Neural Networks Using Relaxed Reachability.
+-	[🔓](https://doi.org/10.1007/978-3-030-81685-8_12) Robustness Verification of Semantic Segmentation Neural Networks Using Relaxed Reachability.
 	[Hoang-Dung Tran](https://dblp.org/pid/160/7295.html), [Neelanjana Pal](https://dblp.org/pid/173/8540.html), [Patrick Musau](https://dblp.org/pid/215/3389.html), [Diego Manzanas Lopez](https://dblp.org/pid/215/3580.html), [Nathaniel Hamilton](https://dblp.org/pid/200/7619.html), [Xiaodong Yang](https://dblp.org/pid/19/1551.html), [Stanley Bak](https://dblp.org/pid/16/7787.html), [Taylor T. Johnson](https://dblp.org/pid/96/11505.html)
 	⚙️
--	[🔓](https://doi.org/https://doi.org/10.1007/978-3-030-81685-8_35) Constraint-Based Relational Verification.
+-	[🔓](https://doi.org/10.1007/978-3-030-81685-8_35) Constraint-Based Relational Verification.
 	[Hiroshi Unno ](https://dblp.org/pid/24/6058.html), [Tachio Terauchi](https://dblp.org/pid/96/889.html), [Eric Koskinen](https://dblp.org/pid/38/5902.html)
 	⚙️
--	[🔓](https://doi.org/https://doi.org/10.1007/978-3-030-81685-8_1) NNrepair - Constraint-Based Repair of Neural Network Classifiers.
+-	[🔓](https://doi.org/10.1007/978-3-030-81685-8_1) NNrepair - Constraint-Based Repair of Neural Network Classifiers.
 	[Muhammad Usman ](https://dblp.org/pid/20/241-24.html), [Divya Gopinath](https://dblp.org/pid/16/7856.html), [Youcheng Sun](https://dblp.org/pid/126/5212.html), [Yannic Noller](https://dblp.org/pid/214/0370.html), [Corina S. Pasareanu](https://dblp.org/pid/03/4368.html)
 	⚙️
--	[🔓](https://doi.org/https://doi.org/10.1007/978-3-030-81685-8_21) Synthesizing Invariant Barrier Certificates via Difference-of-Convex Programming.
+-	[🔓](https://doi.org/10.1007/978-3-030-81685-8_21) Synthesizing Invariant Barrier Certificates via Difference-of-Convex Programming.
 	[Qiuye Wang](https://dblp.org/pid/172/8095.html), [Mingshuai Chen](https://dblp.org/pid/169/1207.html), [Bai Xue ](https://dblp.org/pid/74/2716-1.html), [Naijun Zhan](https://dblp.org/pid/63/1911.html), [Joost-Pieter Katoen](https://dblp.org/pid/k/JoostPieterKatoen.html)
 	⚙️
--	[🔓](https://doi.org/https://doi.org/10.1007/978-3-030-81685-8_17) Gobra - Modular Specification and Verification of Go Programs.
+-	[🔓](https://doi.org/10.1007/978-3-030-81685-8_17) Gobra - Modular Specification and Verification of Go Programs.
 	[Felix A. Wolf](https://dblp.org/pid/276/5744.html), [Linard Arquint](https://dblp.org/pid/195/8358.html), [Martin Clochard](https://dblp.org/pid/139/2440.html), [Wytse Oortwijn](https://dblp.org/pid/178/0425.html), [João C. Pereira](https://dblp.org/pid/293/8268.html), [Peter Müller ](https://dblp.org/pid/m/PMuller1.html)
 	⚙️
--	[🔓](https://doi.org/https://doi.org/10.1007/978-3-030-81685-8_22) An Iterative Scheme of Safe Reinforcement Learning for Nonlinear Systems via Barrier Certificate Generation.
+-	[🔓](https://doi.org/10.1007/978-3-030-81685-8_22) An Iterative Scheme of Safe Reinforcement Learning for Nonlinear Systems via Barrier Certificate Generation.
 	[Zhengfeng Yang](https://dblp.org/pid/68/3884.html), [Yidan Zhang](https://dblp.org/pid/11/8540.html), [Wang Lin](https://dblp.org/pid/36/5376.html), [Xia Zeng](https://dblp.org/pid/62/6760.html), [Xiaochao Tang](https://dblp.org/pid/297/3667.html), [Zhenbing Zeng](https://dblp.org/pid/56/2636.html), [Zhiming Liu ](https://dblp.org/pid/l/ZhimingLiu1.html)
 	⚙️
--	[🔓](https://doi.org/https://doi.org/10.1007/978-3-030-81685-8_29) Effective Hybrid System Falsification Using Monte Carlo Tree Search Guided by QB-Robustness.
+-	[🔓](https://doi.org/10.1007/978-3-030-81685-8_29) Effective Hybrid System Falsification Using Monte Carlo Tree Search Guided by QB-Robustness.
 	[Zhenya Zhang](https://dblp.org/pid/98/4896.html), [Deyun Lyu](https://dblp.org/pid/292/9181.html), [Paolo Arcaini](https://dblp.org/pid/86/7855.html), [Lei Ma ](https://dblp.org/pid/20/6534-3.html), [Ichiro Hasuo](https://dblp.org/pid/26/4542.html), [Jianjun Zhao](https://dblp.org/pid/71/6948.html)
 	⚙️
--	[🔓](https://doi.org/https://doi.org/10.1007/978-3-030-81685-8_8) BDD4BNN - A BDD-Based Quantitative Analysis Framework for Binarized Neural Networks.
+-	[🔓](https://doi.org/10.1007/978-3-030-81685-8_8) BDD4BNN - A BDD-Based Quantitative Analysis Framework for Binarized Neural Networks.
 	[Yedi Zhang](https://dblp.org/pid/230/8027.html), [Zhe Zhao](https://dblp.org/pid/28/6429.html), [Guangke Chen](https://dblp.org/pid/252/5255.html), [Fu Song](https://dblp.org/pid/09/10016.html), [Taolue Chen](https://dblp.org/pid/28/4743.html)
 	⚙️
