Start sorting out tools into groups

--- a/Conferences/CAV 2020(2).md
+++ b/Conferences/CAV 2020(2).md
@@ -59,7 +59,7 @@
 	✅ Implemented [[Ceramist]]
 -	[🔓](https://doi.org/10.1007/978-3-030-53291-8_26) Optimistic Value Iteration.
 	[Arnd Hartmanns](https://dblp.org/pid/89/7952.html), [Benjamin Lucien Kaminski](https://dblp.org/pid/39/9937.html)
-	✅ Implemented in [[mcsta]], [[Modest Toolset]]
+	✅ Implemented in [[mcsta]], [[Modest]] Toolset
 -	[🔓](https://doi.org/10.1007/978-3-030-53291-8_8) Towards Model Checking Real-World Software-Defined Networks.
 	[Vasileios Klimis](https://dblp.org/pid/263/6824.html), [George Parisis](https://dblp.org/pid/12/4999.html), [Bernhard Reus](https://dblp.org/pid/28/3100.html)
 	✅ Implemented [[MOCS]]
