--- a/Conferences/CAV 2020.md
+++ b/Conferences/CAV 2020.md
@@ -21,7 +21,7 @@
 	✅ Implemented in [[IAM Access Analyzer]]
 -	[🔓](https://doi.org/10.1007/978-3-030-53288-8_4) Improved Geometric Path Enumeration for Verifying ReLU Neural Networks.
 	[Stanley Bak](https://dblp.org/pid/16/7787.html), [Hoang-Dung Tran](https://dblp.org/pid/160/7295.html), [Kerianne Hobbs](https://dblp.org/pid/200/8219.html), [Taylor T. Johnson](https://dblp.org/pid/96/11505.html)
-	✅ Implemented in [[nnenum]]
+	✅ Implemented in [[NNENUM]]
 -	[🔓](https://doi.org/10.1007/978-3-030-53288-8_21) Approximate Counting of Minimal Unsatisfiable Subsets.
 	[Jaroslav Bendík](https://dblp.org/pid/181/7743.html), [Kuldeep S. Meel](https://dblp.org/pid/129/1623.html)
 	✅ Implemented [[AMUSIC]]
@@ -58,7 +58,7 @@
 	✅ Presents [[TarTar]]
 -	[🔓](https://doi.org/10.1007/978-3-030-53288-8_14) Refinement for Structured Concurrent Programs.
 	[Bernhard Kragl](https://dblp.org/pid/138/6924.html), [Shaz Qadeer](https://dblp.org/pid/q/ShazQadeer.html), [Thomas A. Henzinger](https://dblp.org/pid/h/ThomasAHenzinger.html)
-	✅ Implemented in [[CIVL (Boogie extension)]]
+	✅ Expands [[CIVL]]
 -	[🔓](https://doi.org/10.1007/978-3-030-53288-8_16) [[Hampa]] - Solver-Aided Recency-Aware Replication.
 	[Xiao Li](https://dblp.org/pid/66/2069.html), [Farzin Houshmand](https://dblp.org/pid/232/9988.html), [Mohsen Lesani](https://dblp.org/pid/82/2603.html)
 	✅ Presents [[Hampa]]
