Resolve ambiguities with git-links

--- a/Conferences/CAV 2020(2).md
+++ b/Conferences/CAV 2020(2).md
@@ -9,18 +9,18 @@
 -	[🔓](https://doi.org/10.1007/978-3-030-53291-8_27) [[PrIC3]] - Property Directed Reachability for MDPs.
 	[Kevin Batz](https://dblp.org/pid/215/5068.html), [Sebastian Junges](https://dblp.org/pid/115/4386.html), [Benjamin Lucien Kaminski](https://dblp.org/pid/39/9937.html), [Joost-Pieter Katoen](https://dblp.org/pid/k/JoostPieterKatoen.html), [Christoph Matheja](https://dblp.org/pid/172/5070.html), [Philipp Schröer](https://dblp.org/pid/264/0074.html)
 	✅ Presents [[PrIC3]]
--	[🔓](https://doi.org/10.1007/978-3-030-53291-8_3) RTLola Cleared for Take-Off - Monitoring Autonomous Aircraft.
+-	[🔓](https://doi.org/10.1007/978-3-030-53291-8_3) [[RTLola]] Cleared for Take-Off - Monitoring Autonomous Aircraft.
 	[Jan Baumeister](https://dblp.org/pid/253/1662.html), [Bernd Finkbeiner](https://dblp.org/pid/73/4443.html), [Sebastian Schirmer](https://dblp.org/pid/185/8889.html), [Maximilian Schwenger](https://dblp.org/pid/191/6041.html), [Christoph Torens](https://dblp.org/pid/33/9870.html)
-	✅ Introduces the [[RTLola]] formal specification language
+	✅ Presents [[RTLola]]
 -	[🔓](https://doi.org/10.1007/978-3-030-53291-8_17) Global PAC Bounds for Learning Discrete Time Markov Chains.
 	[Hugo Bazille](https://dblp.org/pid/150/7498.html), [Blaise Genest](https://dblp.org/pid/59/6859.html), [Cyrille Jégourel](https://dblp.org/pid/33/10826.html), [Jun Sun](https://dblp.org/pid/s/JunSun1.html)
 	❌ None
 -	[🔓](https://doi.org/10.1007/978-3-030-53291-8_22) Qualitative Controller Synthesis for Consumption Markov Decision Processes.
 	[Frantisek Blahoudek](https://dblp.org/pid/131/6892.html), [Tomás Brázdil](https://dblp.org/pid/18/3197.html), [Petr Novotný](https://dblp.org/pid/91/10961.html), [Melkior Ornik](https://dblp.org/pid/175/9333.html), [Pranay Thangeda](https://dblp.org/pid/265/6126.html), [Ufuk Topcu](https://dblp.org/pid/12/6659.html)
 	✅ Implemented in [[FiMDP]]
--	[🔓](https://doi.org/10.1007/978-3-030-53291-8_2) Seminator 2 Can Complement Generalized Büchi Automata via Improved Semi-determinization.
+-	[🔓](https://doi.org/10.1007/978-3-030-53291-8_2) [[Seminator]] 2 Can Complement Generalized Büchi Automata via Improved Semi-determinization.
 	[Frantisek Blahoudek](https://dblp.org/pid/131/6892.html), [Alexandre Duret-Lutz](https://dblp.org/pid/43/6032.html), [Jan Strejcek](https://dblp.org/pid/37/1716.html)
-	✅ Extends [[Seminator]], i.e. presents version 2
+	✅ Extends [[Seminator]]
 -	[🔓](https://doi.org/10.1007/978-3-030-53291-8_20) Checking Qualitative Liveness Properties of Replicated Systems with Stochastic Scheduling.
 	[Michael Blondin](https://dblp.org/pid/117/6024.html), [Javier Esparza](https://dblp.org/pid/e/JEsparza.html), [Martin Helfrich](https://dblp.org/pid/250/9258.html), [Antonín Kucera](https://dblp.org/pid/k/AntoninKucera.html), [Philipp J. Meyer](https://dblp.org/pid/118/3833.html)
 	✅ Implementation of the proposed procedure has no name
