--- a/Conferences/CAV 2020.md
+++ b/Conferences/CAV 2020.md
@@ -43,13 +43,13 @@
 	✅ Implemented in [[FACTEST]]
 -	[🔓](https://doi.org/10.1007/978-3-030-53288-8_6) Formal Analysis and Redesign of a Neural Network-Based Aircraft Taxiing System with [[VerifAI]].
 	[Daniel J. Fremont](https://dblp.org/pid/144/7602.html), [Johnathan Chiu](https://dblp.org/pid/249/2928.html), [Dragos D. Margineantu](https://dblp.org/pid/34/5356.html), [Denis Osipychev](https://dblp.org/pid/202/5662.html), [Sanjit A. Seshia](https://dblp.org/pid/s/SanjitASeshia.html)
-	✅ Uses [[[VerifAI]]]
+	✅ Uses [[VerifAI]]
 -	[🔓](https://doi.org/10.1007/978-3-030-53288-8_20) Nonlinear Craig Interpolant Generation.
 	[Ting Gan](https://dblp.org/pid/50/5083.html), [Bican Xia](https://dblp.org/pid/07/587.html), [Bai Xue](https://dblp.org/pid/74/2716-1.html), [Naijun Zhan](https://dblp.org/pid/63/1911.html), [Liyun Dai](https://dblp.org/pid/08/10346.html)
 	❌ None
--	[🔓](https://doi.org/10.1007/978-3-030-53288-8_26) SAW (Safety Analysis of Weakly-Hard Systems) - A Tool for Safety Analysis of Weakly-Hard Systems.
+-	[🔓](https://doi.org/10.1007/978-3-030-53288-8_26) SAW - A Tool for Safety Analysis of Weakly-Hard Systems.
 	[Chao Huang](https://dblp.org/pid/18/4087.html), [Kai-Chieh Chang](https://dblp.org/pid/199/8216.html), [Chung-Wei Lin](https://dblp.org/pid/87/11.html), [Qi Zhu](https://dblp.org/pid/66/5923-2.html)
-	✅ Presents [SAW (Safety Analysis of Weakly-Hard Systems)](SAW%20(Safety%20Analysis%20of%20Weakly-Hard%20Systems).md)]
+	✅ Presents [SAW](../Tools/Safety%20Analysis%20of%20Weakly-Hard%20Systems.md)
 -	[🔓](https://doi.org/10.1007/978-3-030-53288-8_15) Parameterized Verification of Systems with Global Synchronization and Guards.
 	[Nouraldin Jaber](https://dblp.org/pid/194/4203.html), [Swen Jacobs](https://dblp.org/pid/73/6880.html), [Christopher Wagner](https://dblp.org/pid/59/6876.html), [Milind Kulkarni](https://dblp.org/pid/47/1003.html), [Roopsha Samanta](https://dblp.org/pid/78/7445.html)
 	❌ None
