Add tools/claims for the sake of completeness

--- a/Conferences/CAV 2021.md
+++ b/Conferences/CAV 2021.md
@@ -26,7 +26,7 @@
 	❌ None
 -	[🔓](https://doi.org/10.1007/978-3-030-81685-8_24) Computing Bottom SCCs Symbolically Using Transition Guided Reduction.
 	[Nikola Benes](https://dblp.org/pid/71/1110.html), [Lubos Brim](https://dblp.org/pid/92/3060.html), [Samuel Pastva](https://dblp.org/pid/167/4487.html), [David Safránek](https://dblp.org/pid/86/2438.html)
-	⚙️ Implemented an algorithm called ITGR, tool doesn't seem to have a name, seems to be just a prototype
+	✅ Implemented an algorithm called ITGR, tool doesn't seem to have a name, seems to be just a prototype
 -	[🔓](https://doi.org/10.1007/978-3-030-81685-8_31) Verified Cryptographic Code for Everybody.
 	[Brett Boston](https://dblp.org/pid/169/6792.html), [Samuel Breese](https://dblp.org/pid/195/8676.html), [Joey Dodds](https://dblp.org/pid/223/5187.html), [Mike Dodds](https://dblp.org/pid/77/665.html), [Brian Huffman](https://dblp.org/pid/69/3465.html), [Adam Petcher](https://dblp.org/pid/90/7791.html), [Andrei Stefanescu](https://dblp.org/pid/13/9657.html)
 	❌ None
@@ -38,7 +38,7 @@
 	✅ Presents [[CloudFORMAL]]
 -	[🔓](https://doi.org/10.1007/978-3-030-81685-8_9) Automated Safety Verification of Programs Invoking Neural Networks.
 	[Maria Christakis](https://dblp.org/pid/05/7730.html), [Hasan Ferit Eniser](https://dblp.org/pid/162/5556.html), [Holger Hermanns](https://dblp.org/pid/h/HolgerHermanns.html), [Jörg Hoffmann ](https://dblp.org/pid/26/836.html), [Yugesh Kothari](https://dblp.org/pid/297/3239.html), [Jianlin Li](https://dblp.org/pid/16/3878.html), [Jorge A. Navas](https://dblp.org/pid/77/4230a.html), [Valentin Wüstholz](https://dblp.org/pid/28/9798.html)
-	⚙️ Implementation doesn't seem to have a name? https://github.com/Practical-Formal-Methods/clam-racetrack
+	✅ Implementation doesn't seem to have a name? https://github.com/Practical-Formal-Methods/clam-racetrack
 -	[🔓](https://doi.org/10.1007/978-3-030-81685-8_19) Checking Data-Race Freedom of GPU Kernels, Compositionally.
 	[Tiago Cogumbreiro](https://dblp.org/pid/94/7128.html), [Julien Lange](https://dblp.org/pid/96/7159.html), [Dennis Liew Zhen Rong](https://dblp.org/pid/297/3624.html), [Hannah Zicarelli](https://dblp.org/pid/297/3355.html)
 	✅ Presents [[Faial]]
