Commit changes to get up to date with main

--- a/Conferences/CAV 2021.md
+++ b/Conferences/CAV 2021.md
@@ -50,7 +50,7 @@
 	✅ Extends [Nagini](Nagini.md)
 -	[🔓](https://doi.org/10.1007/978-3-030-81685-8_15) Summing up Smart Transitions.
 	[Neta Elad](https://dblp.org/pid/292/8081.html), [Sophie Rain](https://dblp.org/pid/292/7625.html), [Neil Immerman](https://dblp.org/pid/i/NeilImmerman.html), [Laura Kovács](https://dblp.org/pid/k/LauraKovacs.html), [Mooly Sagiv](https://dblp.org/pid/s/SSagiv.html)
-	⚙️
+	❌ None
 -	[🔓](https://doi.org/10.1007/978-3-030-81685-8_39) Counterexample-Guided Partial Bounding for Recursive Function Synthesis.
 	[Azadeh Farzan](https://dblp.org/pid/89/148.html), [Victor Nicolet](https://dblp.org/pid/194/2361.html)
 	⚙️
